# PAPT-reference-implementation

./: .gitignore  Amplitudes.cpp  Amplitudes.h  CMakeLists.txt  Hamiltonian.cpp  Hamiltonian.h  LA.cpp  LA.h  LICENSE  ManyBody.cpp  ManyBody.h  README.md  main.cpp
.github/workflows/: build-and-test.yml
docker/: Dockerfile
examples/: .gitignore  CMakeLists.txt  be.fcidump  be.inp  c.fcidump  c_all.inp  c_valence.inp  ch2.fcidump  ch2.inp  li.fcidump  li.inp  ne.fcidump  ne.inp
src/: ADC.cpp  ADC.h  Amplitudes.cpp  CMakeLists.txt  Hamiltonian.cpp  ManyBody.cpp  ManyBody.h  main.cpp  utility.cpp  utility.h
